Fixed player search on smaller devices

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -188,6 +188,68 @@
     margin: 0 0 1rem;
   }
 
+  #nav-mobile-search {
+    color: var(--heading-color);
+    font-size: 1.3rem;
+  }
+
+  #mobile-search {
+    opacity: 0;
+    pointer-events: none;
+    position: fixed;
+    width: 100%;
+    top: 65px;
+    z-index: 1000;
+    transition:
+      opacity 0.5s ease,
+      transform 0.5s ease,
+      height 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateY(-65px);
+    height: 0;
+    z-index: 9;
+
+    @starting-style {
+      height: 0;
+      transform: translateY(-65px);
+      opacity: 0;
+    }
+
+    &.active {
+      opacity: 1;
+      pointer-events: auto;
+      transform: translateY(0);
+      height: auto;
+    }
+  }
+
+  #mobile-search .suggestion-input {
+    width: 100%;
+    max-width: none;
+    height: 60px;
+  }
+
+  #mobile-search .suggestion-input::before {
+    display: none;
+  }
+
+  #mobile-search .suggestion-input .suggestion-box {
+    position: relative;
+    left: 0;
+    top: 0;
+    border-radius: 0;
+  }
+
+  #player-search-mobile {
+    width: 100%;
+    max-width: 100%;
+    border-radius: 0;
+    padding: 0.5rem 2rem;
+    font-size: 1.2rem;
+    border: none;
+    backdrop-filter: blur(20px);
+    outline: none;
+  }
+
   .suggestion-input {
     height: 40px;
     border-radius: 8px;
@@ -4427,6 +4489,7 @@
 
   .season-break-message .inner p {
     color: #fff;
-    margin-top: 1rem;;
+    margin-top: 1rem;
+    ;
   }
 }
